--- a/Tamagotchi Project/res/layout/main.xml
+++ b/Tamagotchi Project/res/layout/main.xml
@@ -1,12 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
+    android:orientation="horizontal" >
+
     <TextView
-        android:layout_width="fill_parent"
+        android:id="@+id/welcome_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_centerHorizontal="true"
+        android:text="The Tamagotchi Project"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/username_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/welcome_text"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="56dp"
+        android:text="Username:" />
+
+    <EditText
+        android:id="@+id/txt_username"
+        android:layout_width="250px"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/username_text"
+        android:layout_centerHorizontal="true"
+        android:singleLine="true" />
+
+    <TextView
+        android:id="@+id/password_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_username"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp"
+        android:text="Password:" />
+
+    <EditText
+        android:id="@+id/txt_password"
+        android:layout_width="250px"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password_text"
+        android:layout_centerHorizontal="true"
+        android:password="true"
+        android:singleLine="true" >
 
-</LinearLayout>
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:text="Login!" />
+
+</RelativeLayout>
