--- a/Tamagotchi Project/res/layout/main.xml
+++ b/Tamagotchi Project/res/layout/main.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal" >
-
+
     <TextView
         android:id="@+id/welcome_text"
         android:layout_width="wrap_content"
@@ -11,52 +11,63 @@
         android:layout_centerHorizontal="true"
         android:text="The Tamagotchi Project"
         android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/username_text"
+
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/welcome_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="14dp"
+        android:src="@drawable/kuro" />
+
+    <TextView
+        android:id="@+id/username_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/imageView1"
+        android:layout_marginTop="14dp"
         android:text="Username:" />
-
+
     <EditText
         android:id="@+id/txt_username"
         android:layout_width="250px"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username_text"
         android:layout_centerHorizontal="true"
-        android:singleLine="true" />
-
+        android:layout_marginTop="14dp"
+        android:singleLine="true" >
+
+        <requestFocus />
+    </EditText>
+
     <TextView
         android:id="@+id/password_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_username"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="20dp"
         android:text="Password:" />
-
+
     <EditText
         android:id="@+id/txt_password"
         android:layout_width="250px"
         android:layout_height="wrap_content"
         android:layout_below="@+id/password_text"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
         android:password="true"
-        android:singleLine="true" >
+        android:singleLine="true" />
 
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_password"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:text="Login!" />
 
 </RelativeLayout>
