Fixed touch recognition glitch in GameObject handleActionDown()

--- a/Tamagotchi Project/res/layout/login.xml
+++ b/Tamagotchi Project/res/layout/login.xml
@@ -91,6 +91,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dip"
                 android:text="Login" />
+            
+            <TextView android:id="@+id/link_to_register"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_marginTop="40dip"
+                  android:layout_marginBottom="40dip"
+                  android:text="New user? Register here"
+                  android:gravity="center"
+                  android:textSize="16dip"
+                  android:textColor="#0b84aa"/>
         </LinearLayout>
         <!-- Login Form Ends -->
     </RelativeLayout>
